--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,12 @@ spring:
 
 server:
     port: 8082
+
+ # email config.
+#config:
+ #   username: agbashOfficial81@gmail.com
+ #   password: vgyfzugkqhwnbiea
+ #   email: agbashOfficial81@gmail.com
+
+
+
